<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>Farris</groupId>
  <artifactId>noduledistances</artifactId>
  <version>0.5.0-SNAPSHOT</version>

  <name>noduledistances</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  
  
	<repositories>
		<repository>
			<id>scijava.public</id>
			<url>https://maven.scijava.org/content/groups/public</url>
		</repository>
	</repositories>
	
	
  <dependencies>
  
  <!-- THE FOLLOWING DEPENDENCIES ARE LOCAL DEPENDENCIES FOR THIS PROJECT-->
  	<dependency>
        <groupId>com.example</groupId>
        <artifactId>TraceSkeleton</artifactId>
        <version>1.0</version>
    </dependency>
	<dependency>
        <groupId>com.example</groupId>
        <artifactId>KShortestPathsFork</artifactId>
        <version>1.0</version>
    </dependency>
	

	
	
	
	
<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>com.github.ArlindNocaj</groupId>
			<artifactId>power-voronoi-diagram</artifactId>
			<version>-SNAPSHOT</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
		<dependency>
    		<groupId>org.apache.commons</groupId>
    		<artifactId>commons-math3</artifactId>
    		<version>3.6.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.scijava/scijava-common -->	
		<!--  Fiji dependencies  -->
		<dependency>
			<groupId>sc.fiji</groupId>
			<artifactId>Trainable_Segmentation</artifactId>
			<version>4.0.0</version>
		</dependency>

		<!--  ImageJ dependencies  -->
		<!-- https://mvnrepository.com/artifact/net.imagej/imagej-ops -->
		<dependency>
    		<groupId>net.imagej</groupId>
    		<artifactId>imagej-ops</artifactId>
    		<version>2.2.0</version>
		</dependency>
		<dependency>
			<groupId>net.imagej</groupId>
			<artifactId>imagej</artifactId>
			<version>2.16.0</version>
		</dependency>
		
		<dependency>
			<groupId>net.imagej</groupId>
			<artifactId>ij</artifactId>
			<version>1.54p</version>
		</dependency>
		
		
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.10</version>
		</dependency>
		
	<!--  Test scope dependencies  -->
	<!-- https://mvnrepository.com/artifact/net.praqma/junit-tools -->
		
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
    		<groupId>org.junit.jupiter</groupId>
    		<artifactId>junit-jupiter-api</artifactId>
    		<version>5.12.0</version>
    		<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
		
		<!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
		
  </dependencies>

  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
	  
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
		  <configuration>
			<source>1.8</source> 
			<target>1.8</target>
		</configuration>
        </plugin>
        <plugin>
          	<artifactId>maven-surefire-plugin</artifactId>
          	<version>3.0.0-M7</version>
           	<configuration>
                <argLine>
                	--add-opens java.base/java.lang=ALL-UNNAMED
                    --add-opens java.base/java.time=ALL-UNNAMED
					--add-opens java.base/java.time.format=ALL-UNNAMED
                    --add-opens java.base/java.util=ALL-UNNAMED
				</argLine>
            </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
		
      </plugins>
    </pluginManagement>
  </build>
</project>
